# FDM-Customer

./: .gitignore  DEPLOYMENT.md  README.md  analysis_results.pkl  churn_model.joblib  churn_prediction_function.py  churn_prediction_model.pkl  complete_churn_analysis.ipynb  complete_churn_analysis.py  complete_churn_model.joblib  feature_info.joblib  feature_scaler.joblib  label_encoder.joblib  load_data.py  netlify.toml  package-lock.json  package.json  render-python.yaml  render.yaml  requirements.txt  run_analysis_with_existing_data.py  save_joblib_model.py  setup.sh
backend/: Dockerfile  app.py  app_simple.py  pyproject.toml  requirements-basic.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  setup.py
database/: setup_db.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  config.js  index.css
frontend/src/components/: Header.js  Sidebar.js
frontend/src/pages/: Analytics.js  Campaigns.js  Customers.js  Dashboard.js  Predictions.js
